--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,11 @@ h1 {
 
 @media screen and (max-width: 510px) {
 
+  .screen {
+    justify-content: start;
+    padding-top: 20px;
+  }
+
   .board {
     width: 90vw;
     height: 70vh;
